Correções em classes. Atualização do maven com nova dependência Atualização do Readme com inserção de vídeo. Inserção do arquivo output-lteralura-final na pasta output.